--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -126,7 +126,7 @@
   }
 }
 
-.App .About .page-title-grouping {
+.App .About .SectionTitleGrouping {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -143,7 +143,7 @@
   margin-top: 0.8rem;
 }
 
-.App .About .page-title-grouping .page-title {
+.App .About .SectionTitleGrouping .section-title {
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
   font-size: 2rem;
@@ -151,7 +151,7 @@
   color: #252934;
 }
 
-.App .About .page-title-grouping .underline-page-title {
+.App .About .SectionTitleGrouping .section-title-underline {
   background: #252934;
   height: 4px;
   width: 70px;
@@ -356,7 +356,7 @@
   }
 }
 
-.App .Projects .page-title-grouping {
+.App .Projects .SectionTitleGrouping {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -371,7 +371,7 @@
   margin-bottom: 1em;
 }
 
-.App .Projects .page-title-grouping .page-title {
+.App .Projects .SectionTitleGrouping .section-title {
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
   font-size: 2rem;
@@ -379,7 +379,7 @@
   color: #252934;
 }
 
-.App .Projects .page-title-grouping .underline-page-title {
+.App .Projects .SectionTitleGrouping .section-title-underline {
   background: #252934;
   height: 4px;
   width: 70px;
@@ -547,16 +547,16 @@
 
 .App .Projects .project-card-container .project-card-page-2 .projects-container-back .project-information-container {
   overflow-y: scroll;
-  width: 95%;
+  width: 90%;
   height: 100%;
   padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .App .Projects .project-card-container .project-card-page-2 .projects-container-back .project-information-container .project-information-text {
   overflow-y: scroll;
-  padding-bottom: 1rem;
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .App .Projects .project-card-container .project-card-page-2 .projects-container-back .flip-back-button-container {
@@ -591,6 +591,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   height: 40vh;
   overflow: hidden;
@@ -602,7 +605,7 @@
   }
 }
 
-.App .Contact .page-title-grouping {
+.App .Contact .SectionTitleGrouping {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -617,7 +620,7 @@
   margin-bottom: 0.5em;
 }
 
-.App .Contact .page-title-grouping .page-title {
+.App .Contact .SectionTitleGrouping .section-title {
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
   font-size: 2rem;
@@ -625,7 +628,7 @@
   color: #ffffff;
 }
 
-.App .Contact .page-title-grouping .underline-page-title {
+.App .Contact .SectionTitleGrouping .section-title-underline {
   background: #ffffff;
   height: 4px;
   width: 70px;
