--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -98,20 +98,20 @@
             grid-area: about;
             height: 100%;
         }
-        .page-title-grouping {
+        .SectionTitleGrouping {
             display: flex;
             flex-direction: column;
             align-items: center;
             height: max-content;
             margin-top: 0.8rem;
-            .page-title {
+            .section-title {
                 font-family: 'Raleway', sans-serif;
                 font-weight: 600;
                 font-size: 2rem;
                 text-transform: uppercase;
                 color: #252934;
             }
-            .underline-page-title {
+            .section-title-underline {
                 background: #252934;
                 height: 4px;
                 width: 70px;
@@ -241,20 +241,20 @@
             grid-area: projects;
             height: 100%;
         }
-        .page-title-grouping {
+        .SectionTitleGrouping {
             display: flex;
             flex-direction: column;
             align-items: center;
             margin-top: 0.8rem;
             margin-bottom: 1em;
-            .page-title {
+            .section-title {
                 font-family: 'Raleway', sans-serif;
                 font-weight: 600;
                 font-size: 2rem;
                 text-transform: uppercase;
                 color: #252934;
             }
-            .underline-page-title {
+            .section-title-underline {
                 background: #252934;
                 height: 4px;
                 width: 70px;
@@ -354,14 +354,14 @@
                     align-items: center;
                     .project-information-container {
                         overflow-y: scroll;
-                        width: 95%;
+                        width: 90%;
                         height: 100%;
                         padding-top: 1rem;
+                        padding-bottom: 1rem;
                         .project-information-text {
                             overflow-y: scroll;
-                            padding-bottom: 1rem;
-                            padding-left: 2.5rem;
-                            padding-right: 2.5rem;
+                            padding-left: 2rem;;
+                            padding-right: 2rem;
                         }
                     }
                     .flip-back-button-container {
@@ -389,26 +389,27 @@
         background-color: #252934;
         display: flex;
         flex-direction: column;
+        align-items: center;
         width: 100%;
         height: 40vh;
         overflow: hidden;
         @media all and (min-width: 480px) {
             display: none;
         }
-        .page-title-grouping {
+        .SectionTitleGrouping {
             display: flex;
             flex-direction: column;
             align-items: center;
             margin-top: 2.5em;
             margin-bottom: 0.5em;
-            .page-title {
+            .section-title {
                 font-family: 'Raleway', sans-serif;
                 font-weight: 600;
                 font-size: 2rem;
                 text-transform: uppercase;
                 color: #ffffff;
             }
-            .underline-page-title {
+            .section-title-underline {
                 background: #ffffff;
                 height: 4px;
                 width: 70px;
