--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -18,10 +18,9 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-}
-
-.App ::-webkit-scrollbar {
-  display: none;
+  /*::-webkit-scrollbar {
+        display: none;
+    }*/
 }
 
 .App .Intro {
@@ -152,6 +151,7 @@
 @media all and (min-width: 769px) {
   .App .desktop-page .container-about-projects-contact .About {
     height: 100vh;
+    min-width: 450px;
     max-width: 450px;
   }
 }
@@ -210,10 +210,10 @@
 @media all and (min-width: 415px) {
   .App .desktop-page .container-about-projects-contact .About .about-container .about-content-container-no-title {
     border-radius: 6px;
-    -webkit-box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
-            box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
-    padding: 1rem;
+    -webkit-box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.1);
+            box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.1);
     margin-bottom: 1rem;
+    padding: 1rem 1rem 0 1rem;
     overflow: hidden;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -391,7 +391,7 @@
   border-radius: 12px;
   padding: 0.25rem;
   border: 2.5px dashed #ccc;
-  border-radius: 12px;
+  border-radius: 6px;
   background-color: white;
 }
 
@@ -522,8 +522,8 @@
   width: 90%;
   max-width: 350px;
   border-radius: 6px;
-  -webkit-box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
-          box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.1);
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-front {
@@ -612,6 +612,30 @@
       -ms-flex-direction: column;
           flex-direction: column;
   background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+}
+
+.App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back ::-webkit-scrollbar {
+  width: 5px;
+  height: 0;
+}
+
+.App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back ::-webkit-scrollbar-track {
+  margin: 20px 0 20px;
+}
+
+.App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back ::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0);
+  border-radius: 10px;
+  -webkit-box-shadow: rgba(255, 255, 255, 0.3) 0 0 0 1px;
+          box-shadow: rgba(255, 255, 255, 0.3) 0 0 0 1px;
+}
+
+.App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back :hover::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.45);
+}
+
+.App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back ::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.55);
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back .project-title-back {
