--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -22,9 +22,9 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    ::-webkit-scrollbar {
+    /*::-webkit-scrollbar {
         display: none;
-    }
+    }*/
     .Intro {
         position: relative;
         display: flex;
@@ -96,6 +96,7 @@
                 padding: 0 1rem 0 1rem;
                 @media all and (min-width: 769px) { 
                     height: 100vh;
+                    min-width: 450px;
                     max-width: 450px;
                 }
                 .about-container {
@@ -129,9 +130,9 @@
                         height: 100%;
                         @media all and (min-width: 415px) {
                             border-radius: 6px;
-                            box-shadow: 4px 7px 13px 3px rgba(0, 0, 0,0.1);
-                            padding: 1rem;
+                            box-shadow: 2px 2px 10px 3px rgba(0, 0, 0,0.1);
                             margin-bottom: 1rem;
+                            padding: 1rem 1rem 0 1rem;
                             overflow: hidden;
                             justify-content: space-between;
                         }
@@ -235,7 +236,7 @@
                                 border-radius: 12px;
                                 padding: 0.25rem;
                                 border: 2.5px dashed #ccc;
-                                border-radius: 12px;
+                                border-radius: 6px;
                                 background-color: white;
                                 .social-icons {
                                     margin: 0.25rem;
@@ -294,7 +295,6 @@
                             max-width: 400px;
                         }
                         @media all and (min-width: 400px) {
-
                             height: auto;
                         }
                         @media all and (min-width: 1024px) {
@@ -316,7 +316,7 @@
                                 width: 90%;
                                 max-width: 350px;
                                 border-radius: 6px;
-                                box-shadow: 4px 7px 13px 3px rgba(0, 0, 0,0.1);
+                                box-shadow: 2px 2px 10px 3px rgba(0, 0, 0,0.1);
                             }
                             .projects-container-front {
                                 position: absolute;
@@ -371,6 +371,15 @@
                                 display: flex;
                                 flex-direction: column;
                                 background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+                                ::-webkit-scrollbar {width: 5px; height: 0;}
+                                ::-webkit-scrollbar-track {margin: 20px 0 20px}
+                                ::-webkit-scrollbar-thumb {
+                                    background: rgba(0,0,0,0.0);
+                                    border-radius: 10px;
+                                    box-shadow: rgba(255,255,255,0.3) 0 0 0 1px;
+                                }
+                                :hover::-webkit-scrollbar-thumb {background: rgba(0,0,0,0.45)}
+                                ::-webkit-scrollbar-thumb:hover {background: rgba(0,0,0,0.55)}
                                 .project-title-back {
                                     position: relative;
                                     color: #252934;
