--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -18,9 +18,10 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  /*::-webkit-scrollbar {
-        display: none;
-    }*/
+}
+
+.App ::-webkit-scrollbar {
+  display: none;
 }
 
 .App .Intro {
@@ -146,6 +147,10 @@
   height: fit-content;
   overflow-x: hidden;
   padding: 0 1rem 0 1rem;
+}
+
+.App .desktop-page .container-about-projects-contact .About ::-webkit-scrollbar {
+  display: none;
 }
 
 @media all and (min-width: 769px) {
@@ -432,6 +437,31 @@
   padding-bottom: 1rem;
 }
 
+.App .desktop-page .container-about-projects-contact .Projects .projects-container ::-webkit-scrollbar {
+  all: unset;
+  width: 5px;
+  height: 0;
+}
+
+.App .desktop-page .container-about-projects-contact .Projects .projects-container ::-webkit-scrollbar-track {
+  margin: 20px 0 20px 0;
+}
+
+.App .desktop-page .container-about-projects-contact .Projects .projects-container ::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0);
+  border-radius: 10px;
+  -webkit-box-shadow: rgba(255, 255, 255, 0.3) 0 0 0 1px;
+          box-shadow: rgba(255, 255, 255, 0.3) 0 0 0 1px;
+}
+
+.App .desktop-page .container-about-projects-contact .Projects .projects-container :hover::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.45);
+}
+
+.App .desktop-page .container-about-projects-contact .Projects .projects-container ::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.55);
+}
+
 @media all and (min-width: 769px) {
   .App .desktop-page .container-about-projects-contact .Projects .projects-container {
     height: 100vh;
@@ -615,12 +645,13 @@
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back ::-webkit-scrollbar {
+  all: unset;
   width: 5px;
   height: 0;
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back ::-webkit-scrollbar-track {
-  margin: 20px 0 20px;
+  margin: 20px 0 20px 0;
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back ::-webkit-scrollbar-thumb {
@@ -703,8 +734,8 @@
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back .project-information-container .project-information-image {
-  -webkit-box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
-          box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   width: 75%;
   height: auto;
@@ -712,8 +743,8 @@
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back .project-information-container .project-information-image-rectangle {
-  -webkit-box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
-          box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
   width: 90%;
   height: auto;
@@ -721,8 +752,8 @@
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back .project-information-container .project-information-video {
-  -webkit-box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
-          box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
   width: 90%;
   height: auto;
