--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -22,9 +22,9 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    /*::-webkit-scrollbar {
+    ::-webkit-scrollbar {
         display: none;
-    }*/
+    }
     .Intro {
         position: relative;
         display: flex;
@@ -94,6 +94,9 @@
                 height: fit-content;
                 overflow-x: hidden;
                 padding: 0 1rem 0 1rem;
+                ::-webkit-scrollbar {
+                    display: none;
+                }
                 @media all and (min-width: 769px) { 
                     height: 100vh;
                     min-width: 450px;
@@ -263,6 +266,25 @@
                     flex-direction: column;
                     align-items: center;
                     padding-bottom: 1rem;
+                    ::-webkit-scrollbar {
+                        all: unset;
+                        width: 5px;
+                        height: 0;
+                    }
+                    ::-webkit-scrollbar-track {
+                        margin: 20px 0 20px 0
+                    }
+                    ::-webkit-scrollbar-thumb {
+                        background: rgba(0,0,0,0.0);
+                        border-radius: 10px;
+                        box-shadow: rgba(255,255,255,0.3) 0 0 0 1px;
+                    }
+                    :hover::-webkit-scrollbar-thumb {
+                        background: rgba(0,0,0,0.45);
+                    }
+                    ::-webkit-scrollbar-thumb:hover {
+                        background: rgba(0,0,0,0.55);
+                    }
                     @media all and (min-width: 769px) {
                         height: 100vh;
                     }
@@ -371,15 +393,25 @@
                                 display: flex;
                                 flex-direction: column;
                                 background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
-                                ::-webkit-scrollbar {width: 5px; height: 0;}
-                                ::-webkit-scrollbar-track {margin: 20px 0 20px}
+                                ::-webkit-scrollbar {
+                                    all: unset;
+                                    width: 5px;
+                                    height: 0;
+                                }
+                                ::-webkit-scrollbar-track {
+                                    margin: 20px 0 20px 0
+                                }
                                 ::-webkit-scrollbar-thumb {
                                     background: rgba(0,0,0,0.0);
                                     border-radius: 10px;
                                     box-shadow: rgba(255,255,255,0.3) 0 0 0 1px;
                                 }
-                                :hover::-webkit-scrollbar-thumb {background: rgba(0,0,0,0.45)}
-                                ::-webkit-scrollbar-thumb:hover {background: rgba(0,0,0,0.55)}
+                                :hover::-webkit-scrollbar-thumb {
+                                    background: rgba(0,0,0,0.45);
+                                }
+                                ::-webkit-scrollbar-thumb:hover {
+                                    background: rgba(0,0,0,0.55);
+                                }
                                 .project-title-back {
                                     position: relative;
                                     color: #252934;
@@ -426,21 +458,21 @@
                                         width: 100%;
                                     }
                                     .project-information-image {
-                                        box-shadow: 4px 7px 13px 3px rgba(0, 0, 0,0.1);
+                                        box-shadow: 2px 2px 10px 3px rgba(0, 0, 0,0.1);
                                         border-radius: 50%;
                                         width: 75%;
                                         height: auto;
                                         margin-bottom: 2rem;
                                     }
                                     .project-information-image-rectangle {
-                                        box-shadow: 4px 7px 13px 3px rgba(0, 0, 0,0.1);
+                                        box-shadow: 2px 2px 10px 3px rgba(0, 0, 0,0.1);
                                         border-radius: 12px;
                                         width: 90%;
                                         height: auto;
                                         margin-bottom: 2rem;
                                     }
                                     .project-information-video {
-                                        box-shadow: 4px 7px 13px 3px rgba(0, 0, 0,0.1);
+                                        box-shadow: 2px 2px 10px 3px rgba(0, 0, 0,0.1);
                                         border-radius: 12px;
                                         width: 90%;
                                         height: auto;
